[gd_scene load_steps=7 format=3 uid="uid://cueq4spghr5e7"]

[ext_resource type="Script" uid="uid://ugm6cum3fspq" path="res://Scenes/Towers/tower_template.gd" id="1_l52f7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8oxuj"]

[sub_resource type="Animation" id="Animation_nqi4l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:buildmode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Top:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_redraw"
}]
}

[sub_resource type="Animation" id="Animation_k8o1g"]
resource_name = "buildmode_bad"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:buildmode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.1, 0, 0.631373)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Top:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.101961, 0, 0.631373)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_redraw"
}]
}

[sub_resource type="Animation" id="Animation_mi6tx"]
resource_name = "buildmode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:buildmode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0313726, 1, 0, 0.631373)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Top:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0313726, 1, 0, 0.631373)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_redraw"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dyhva"]
_data = {
&"RESET": SubResource("Animation_nqi4l"),
&"buildmode_bad": SubResource("Animation_k8o1g"),
&"buildmode_good": SubResource("Animation_mi6tx")
}

[node name="TowerTemplate" type="Area2D" groups=["Towers"]]
collision_layer = 2
collision_mask = 130
script = ExtResource("1_l52f7")
buildmode = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_8oxuj")

[node name="Base" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Top" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="FirePoint" type="Marker2D" parent="Top"]

[node name="Timers" type="Node" parent="."]

[node name="TargetRefresh" type="Timer" parent="Timers"]
autostart = true

[node name="AttackCooldown" type="Timer" parent="Timers"]

[node name="Wake" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="StateChanger" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dyhva")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Timers/TargetRefresh" to="." method="_on_target_refresh_timeout"]
[connection signal="timeout" from="Timers/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Timers/Wake" to="." method="_on_wake_timeout"]
